--- a/rocket.html
+++ b/rocket.html
@@ -55,6 +55,8 @@
     </div>
     <footer>
       Feito com ♥ pela <a href="https://www.rocketseat.com.br">Rocketseat</a>
+
+      <h1>Teste</h1>
     </footer>
   </section>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
